--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "apollo-server-express": "^2.8.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "deepmerge": "^4.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
